fixed attack buttons z-index behind game window

--- a/game-css/background.css
+++ b/game-css/background.css
@@ -42,6 +42,7 @@ body {
 }
 
 .game-window {
+    z-index: -1;
     position: fixed; /* Set position to 'absolute' */
     top: 50%;
     left: 50%;
